<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<com.zhy.android.percent.supportnew.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                                        xmlns:tools="http://schemas.android.com/tools"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:background="@drawable/custom_dialog_round_rect_bg"
                                                        android:orientation="vertical"
    >

    <com.zhy.android.percent.supportnew.PercentLinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_marginBottomPercent="-0.3125%sh"
        app:layout_widthPercent="77.77777777777778%sw"
        >

        <com.zhy.android.percent.supportnew.PercentLinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_marginLeftPercent="5.55555555555556%sw"
            app:layout_marginRightPercent="5.55555555555556%sw"
            app:layout_marginTopPercent="3.125%sh">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:maxLines="1"
                android:textColor="@color/text_black"
                android:textSize="@dimen/dialog_title_textsize"
                android:textStyle="bold"
                />
        </com.zhy.android.percent.supportnew.PercentLinearLayout>

        <com.zhy.android.percent.supportnew.PercentFrameLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_marginLeftPercent="5.55555555555556%sw"
            app:layout_marginRightPercent="5.55555555555556%sw">

            <com.zhy.android.percent.supportnew.PercentLinearLayout
                android:id="@+id/common_message_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_paddingBottomPercent="3.125%sh"
                app:layout_paddingTopPercent="3.125%sh"
                >

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/dialog_message_textsize"/>

                <CheckBox
                    android:id="@+id/no_promp_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:button="@drawable/checkbox_selector"
                    android:paddingLeft="5dp"
                    android:text="@string/dialog_no_promp"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/dialog_message_nopromp_textsize"
                    android:visibility="gone"
                    app:layout_marginTopPercent="2.3%sh"
                    tools:ignore="RtlHardcoded,RtlSymmetry"/>

            </com.zhy.android.percent.supportnew.PercentLinearLayout>
        </com.zhy.android.percent.supportnew.PercentFrameLayout>

        <View
            android:id="@+id/hori_seprator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/splitline_height"
            android:background="@color/divider"/>

        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_negative_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_negative"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/menu_button_bg"
                    android:text="@string/default_negative_btn_label"
                    android:textColor="#666666"
                    android:textSize="@dimen/dialog_button_textsize"/>
            </LinearLayout>

            <View
                android:id="@+id/seprator"
                android:layout_width="@dimen/splitline_height"
                android:layout_height="match_parent"
                android:background="@color/divider">

            </View>

            <LinearLayout
                android:id="@+id/btn_positive_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_positive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/menu_button_bg"
                    android:text="@string/default_positive_btn_label"
                    android:textColor="#39daf7"
                    android:textSize="@dimen/dialog_button_textsize"/>

            </LinearLayout>
        </LinearLayout>
    </com.zhy.android.percent.supportnew.PercentLinearLayout>

</com.zhy.android.percent.supportnew.PercentLinearLayout>
